--- a/codingeek.net/html/gazania/index.html
+++ b/codingeek.net/html/gazania/index.html
@@ -361,10 +361,10 @@
                 <!-- slide-item -->
                 <div class="slide-item">
                     <div class="slide-content">
-                        <h1 class="slide-title-1 slide-title-1-bg animated" data-wow-duration=".5s" data-wow-delay=".5s">SURPRISE</h1>
+                        <h1 class="slide-title-1 slide-title-1-bg animated" data-wow-duration=".5s" data-wow-delay=".5s">chka SURPRISE</h1>
                         <h2 class="slide-title-2  animated" data-wow-duration="1s" data-wow-delay="1s">Your better half</h2>
                         <div class="animated" data-wow-duration="1.5s" data-wow-delay="1.5s">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
+                            <p>haykakan anasnabujakan kentron<span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
                         </div>
                         <div class="btn-wrapper animated" data-wow-duration="2s" data-wow-delay="2s">
                             <a class="boxed-btn btn-rounded" href="shop.html">Explore now</a>
@@ -414,7 +414,7 @@
                         <h1 class="slide-title-1 slide-title-1-bg slide-title-1-bg-1 animated" data-wow-duration=".5s" data-wow-delay=".5s">MEMORABLE</h1>
                         <h2 class="slide-title-2  animated" data-wow-duration="1s" data-wow-delay="1s">The big day</h2>
                         <div class="animated" data-wow-duration="1.5s" data-wow-delay="1.5s" >
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
+                            <p>haykakan anasnabujakan kentron<span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
                         </div>
                         <div class="btn-wrapper animated" data-wow-duration="2s" data-wow-delay="2s">
                             <a class="boxed-btn btn-rounded" href="shop.html">Explore now</a>
