--- a/codingeek.net/html/gazania/index-4.html
+++ b/codingeek.net/html/gazania/index-4.html
@@ -383,7 +383,7 @@
                         <h1 class="slide-title-1 slide-title-1-bg slide-title-1-bg-1 animated" data-wow-duration=".5s" data-wow-delay=".5s">PERFECT</h1>
                         <h2 class="slide-title-2 animated" data-wow-duration="1s" data-wow-delay="1s">Bouquet for her</h2>
                         <div class="animated" data-wow-duration="1.5s" data-wow-delay="1.5s">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
+                            <p>haykakan anasnabujakan kentron<span>tempor incididunt ut labore et dolore magna aliqua. Non blandit massa enim nec. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</span> </p>
                         </div>
                         <div class="btn-wrapper animated" data-wow-duration="2s" data-wow-delay="2s">
                             <a class="boxed-btn btn-rounded" href="shop.html">Explore now</a>
